# SleepingBarber

./: CMakeLists.txt  README.md
include/: Babershop.h  Barber.h  Customer.h
src/: Barber.cpp  Barbershop.cpp  Customer.cpp  main.cpp
